2002-01-04  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Change version number to 0.11-pre5.

	* config.guess, config.sub: Update to GNU version 2002-01-02.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Call gt_FUNC_FNMATCH.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre4.

2001-12-15  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* os2/*: New EMX support.
	* Makefile.am (EXTRA_DIST): Remove old os2/ contents, add new os2/
	contents.
	* acconfig.h: Add conditional include of os2/os2compat.h.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Use a variant of AC_PROG_CXX_WORKS that doesn't abort
	upon failure.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre3.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* config.rpath: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	(gettextsrc_SCRIPTS): New variable.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre2.

2001-11-25  Bruno Haible  <bruno@clisp.org>

	* configure.in: Check for C++ compiler.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Make misc/gettextize executable.

2001-11-10  Bruno Haible  <haible@clisp.cons.org>

	* acconfig.h (PARAMS): Also test for __GNUC__, __SUNPRO_C, __cplusplus
	and __PROTOTYPES because on 64-bit Solaris, we need prototypes
	although __STDC__ is often defined to 0. __GNUC__ covers GCC,
	__SUNPRO_C covers Sun cc, regardless of compilation flags.
	__PROTOTYPES, __cplusplus are just for consistency with libgnuintl.h.

2001-11-03  Bruno Haible  <haible@clisp.cons.org>

	* ltmain.sh: chmod 777 the .libs directory, so that "make install"
	succeeds.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Change version number to 0.11-pre1.
	* Makefile.am (EXTRA_DIST): Add README-alpha.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>
