@@ -159,12 +159,15 @@ AC_OUTPUT([Makefile \
            projects/Makefile \
            misc/Makefile misc/gettextize], [
   dnl Fix unesthetic build commands generated by automake.
-changequote(,)dnl
   for m in lib/Makefile src/Makefile tests/Makefile; do
     sed -e "s,\`test -f \\\$< || echo '\\\$(srcdir)/'\`\\\$<,\\\$<," < $m > $m.tmp
     mv $m.tmp $m
   done
-changequote([, ])dnl
+  dnl Fix an automake-1.5 bug.
+  for m in doc/Makefile; do
+    sed -e 's,^#distdir:,distdir:,' < $m > $m.tmp
+    mv $m.tmp $m
+  done
   dnl Fix permissions of misc/gettextize.
   chmod a+x misc/gettextize
 ])
