@@ -1,3 +1,7 @@
+2002-01-05  Bruno Haible  <bruno@clisp.org>
+
+	* configure.in: Postprocess doc/Makefile.
+
 2002-01-04  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure.in: Change version number to 0.11-pre5.
